Issue #SB-12508 fix: Modal overflow issue

--- a/src/app/client/src/assets/styles/component/_modal.scss
+++ b/src/app/client/src/assets/styles/component/_modal.scss
@@ -18,7 +18,7 @@
         .sb-modal-content {
             min-height: 100px;
             padding: $sb-modal-content-padding;
-            //overflow-y: auto;
+            overflow-y: auto;
         }
         &>.close {
             color: $white-color;
